--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
     	<artifactId>vaadin-client-compiled</artifactId>
     	<version>7.1.5</version>
     </dependency>
+    <dependency>
+    	<groupId>com.vaadin</groupId>
+    	<artifactId>vaadin-cdi</artifactId>
+    	<version>1.0.0.alpha1</version>
+    </dependency>
   </dependencies>
 
   <build>
