--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,8 +15,8 @@
 		<servlet-name>vaadinServlet</servlet-name>
 		<servlet-class>com.vaadin.server.VaadinServlet</servlet-class>
 		<init-param>
-			<param-name>UI</param-name>
-			<param-value>org.vaadin.securityauction.vaadin.TestUI</param-value>
+			<param-name>UIProvider</param-name>
+			<param-value>com.vaadin.cdi.CDIUIProvider</param-value>
 		</init-param>
 	</servlet>
 
