--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
     	<artifactId>vaadin-cdi</artifactId>
     	<version>1.0.0.alpha1</version>
     </dependency>
+    <dependency>
+        <groupId>org.eclipse.persistence</groupId>
+        <artifactId>eclipselink</artifactId>
+        <version>2.5.0</version>
+        <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
