--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,22 @@
         <version>2.5.0</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+		<groupId>org.apache.shiro</groupId>
+		<artifactId>shiro-core</artifactId>
+		<version>1.2.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.shiro</groupId>
+		<artifactId>shiro-web</artifactId>
+		<version>1.2.2</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.h2database</groupId>
+    	<artifactId>h2</artifactId>
+    	<version>1.3.173</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
@@ -136,6 +152,12 @@
         </configuration>
       </plugin>
     </plugins>
+    
+    <resources>
+		<resource>
+			<directory>src/main/resources</directory>
+		</resource>
+	</resources>
   </build>
 
 </project>
