--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -9,8 +9,9 @@ passwordMatcher.passwordService = $passwordService
 jdbcRealm.credentialsMatcher = $passwordMatcher 
 
 # change driver to h2
-ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-ds.serverName = localhost
+# ds = org.h2.Driver
+ds = org.h2.jdbcx.JdbcDataSource
+# ds.serverName = 
 ds.user = sa
-ds.databaseName = securityauction
+ds.URL = jdbc:h2:mem:h2\db
 jdbcRealm.dataSource = $ds
