Added liquibase for database setup

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -13,5 +13,15 @@ jdbcRealm.credentialsMatcher = $passwordMatcher
 ds = org.h2.jdbcx.JdbcDataSource
 # ds.serverName = 
 ds.user = sa
-ds.URL = jdbc:h2:mem:h2\db
+ds.URL = jdbc:h2:file:~/securityauction
 jdbcRealm.dataSource = $ds
+
+authc.loginUrl = /
+
+#only let authenticated users
+#with the appropriate role
+#view the web pages in the secure
+#and admin areas
+[urls]
+/edit/** = authc
+/VAADIN/** = authc
