--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,26 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>2.0.1</version>
+				
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<configuration>
+						<changeLogFile>src/main/resources/defaultdb.xml</changeLogFile>
+							<driver>org.h2.Driver</driver>
+							<url>jdbc:h2:file:~/securityauction</url>
+							<username>sa</username>
+						</configuration>
+						<goals>
+							<goal>update</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
     </plugins>
     
     <resources>
