--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -10,10 +10,10 @@ jdbcRealm.credentialsMatcher = $passwordMatcher
 
 # change driver to h2
 # ds = org.h2.Driver
-ds = org.h2.jdbcx.JdbcDataSource
+ds = ${jdbc.datasource}
 # ds.serverName = 
-ds.user = sa
-ds.URL = jdbc:h2:file:~/securityauction
+ds.user = ${jdbc.username}
+ds.URL = ${jdbc.url}
 jdbcRealm.dataSource = $ds
 
 authc.loginUrl = /
