--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -13,6 +13,7 @@ jdbcRealm.credentialsMatcher = $passwordMatcher
 ds = ${jdbc.datasource}
 # ds.serverName = 
 ds.user = ${jdbc.username}
+ds.password = ${jdbc.password}
 ds.URL = ${jdbc.url}
 jdbcRealm.dataSource = $ds
 
