--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -8,14 +8,9 @@ passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
 passwordMatcher.passwordService = $passwordService 
 jdbcRealm.credentialsMatcher = $passwordMatcher 
 
-# change driver to h2
-# ds = org.h2.Driver
-ds = ${jdbc.datasource}
-# ds.serverName = 
-ds.user = ${jdbc.username}
-ds.password = ${jdbc.password}
-ds.URL = ${jdbc.url}
-jdbcRealm.dataSource = $ds
+dataSource = org.apache.shiro.jndi.JndiObjectFactory
+dataSource.resourceName = jdbc/securityauction_datasource
+jdbcRealm.dataSource = $dataSource
 
 authc.loginUrl = /
 
