Added role management to shiro and stub implementation for admin view

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -1,6 +1,7 @@
 [main]
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm 
 jdbcRealm.authenticationQuery = select password from user where username = ?
+jdbcRealm.userRolesQuery = select role from user_role ur inner join user u on u.id=ur.user_id where u.username = ?
 securityManager.realms = $jdbcRealm
 
 passwordService = org.apache.shiro.authc.credential.DefaultPasswordService 
